cluster/apps/jellyfin/deployment.yaml

  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: jellyfin
    namespace: media
    labels:
      app.kubernetes.io/name: jellyfin
      app: jellyfin
  spec:
    strategy:
      type: Recreate
    replicas: 1
    revisionHistoryLimit: 1
    selector:
      matchLabels:
        # app.kubernetes.io/name: jellyfin
        app: jellyfin
    template:
      metadata:
        labels:
          app.kubernetes.io/name: jellyfin
          app: jellyfin
      spec:
        containers:
          - name: jellyfin
            image: jellyfin/jellyfin:10.11.11
            ports:
              - containerPort: 8096
            resources:
              requests:
                cpu: "250m"
                memory: "512Mi"
              limits:
                cpu: "1000m"
                memory: "2048Mi"
            volumeMounts:
              - name: config
                mountPath: /config
              - name: cache
                mountPath: /cache
              - name: nfs-media
                mountPath: /Media
        volumes:
            - name: config
              persistentVolumeClaim:
                claimName: jellyfin-config
            - name: cache
              persistentVolumeClaim:
                claimName: jellyfin-cache
            - name: nfs-media
              persistentVolumeClaim:
                claimName: jellyfin-nfs-media-pvc
