cluster/apps/jellyfin/service.yaml
# Jellyfin Service
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  labels:
    app: jellyfin
spec:
  type: ClusterIP
  ports:
    - port: 8096
      targetPort: 8096
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: bp-tools
