cluster/apps/jellyfin/ingress.yaml
# Jellyfin Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  annotations:
    kubernetes.io/ingress.class: "external"
    gethomepage.dev/description: Jellyfin
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/icon: sh-jellyfin
    gethomepage.dev/name: Jellyfin
spec:
  ingressClassName: external
  rules:
    - host: jellyfin.gustend.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 8096
